Use Java 23 (avoiding preview which only works with a very specific JDK version)